--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,44 @@
 #wrapper {
-    width: 800px;
-    height: 800px;
-    margin-top: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    background: #000000;
+	width: 850px;
+	height: 850px;
+  font-size: 0px;
+	margin: auto ;
+	background-color: white;
+  font-family: "Helvetica Neue";
+  font-weight: lighter;
+  border: 1px solid #F2F2F2;
 }
+h1 {
+  font-family: "Helvetica Neue";
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+  color: #4f4f4f;
+  font-weight: lighter;
+  font-size: 14;
+
+}
+
+button{
+  text-align: center;
+  position: relative;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  margin: 5px;
+
+  font-size: 14;
+}
+
+
 .row {
-    width: auto;
-    height: 100px;
-    background: #313131;
+	width: 100%;
+  white-space: nowrap;
+  margin: 0px;
 }
+
 .square {
-    width: 100px;
-    height: 100px;
-    margin: 0px;
-    outline: 1px solid;
-    display: inline-block;
-    float: left;
-    background: #FFFFFF;
-}
+	height: 100%;
+
+	display: inline-block;
+  white-space: nowrap;
+  margin: 0px;
